--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "streamqueue": "^1.1.1",
     "tag-loader": "^0.3.0",
     "webpack": "beta",
+    "webpack-hot-middleware": "^2.13.2",
     "webpack-stream": "^3.2.0"
   },
   "homepage": "https://github.com/ptb/2016.12.18#readme",
